Bug 311613 - Eject of CDs fails due to wrong dbus method signature
Summary: Eject of CDs fails due to wrong dbus method signature
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: libsolid-udisks (other bugs)
Version First Reported In: 4.9.4
Platform: unspecified Linux
: NOR major
Target Milestone: ---
Assignee: Lukáš Tinkl
URL:
Keywords:
: 274982 294344 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-12-13 04:37 UTC by Stefan Brüns
Modified: 2013-02-09 04:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Brüns 2012-12-13 04:37:11 UTC
Ejecting a CD from Dolphin or Amarok fails with:

An unspecified error has occurred.: Method "DriveEject" with signature "s" on interface "org.freedesktop.UDisks.Device" doesn't exist

which is absolutely correct as DriveEject has signature "as" or QStringList.
Comment 1 Stefan Brüns 2012-12-15 20:12:30 UTC
Git commit 22cf9862d730e0a23d27ef0e6f30d1d88f2ceb20 by Stefan Brüns.
Committed on 15/12/2012 at 21:11.
Pushed by bruns into branch 'KDE/4.10'.

Use correct signature for DriveEject method arguments

The previous commit added the "unmount" parameter as option for the
DriveEject method. It also inadvertently changed the method signature
of the call from "array of strings" to "string".

DIGEST: Fix ejecting CDs/DVDs when using UDisks backend. UDisks2 is not affected

REVIEW: 107686
FIXED-IN: 4.9.5

M  +1    -1    solid/solid/backends/udisks/udisksopticaldrive.cpp

http://commits.kde.org/kdelibs/22cf9862d730e0a23d27ef0e6f30d1d88f2ceb20
Comment 2 Stefan Brüns 2012-12-15 20:12:37 UTC
Git commit af93389d5a821e1c99374aff90f357cc738228d6 by Stefan Brüns.
Committed on 15/12/2012 at 21:11.
Pushed by bruns into branch 'KDE/4.9'.

Use correct signature for DriveEject method arguments

The previous commit added the "unmount" parameter as option for the
DriveEject method. It also inadvertently changed the method signature
of the call from "array of strings" to "string".

DIGEST: Fix ejecting CDs/DVDs when using UDisks backend. UDisks2 is not affected

REVIEW: 107686
FIXED-IN: 4.9.5

M  +1    -1    solid/solid/backends/udisks/udisksopticaldrive.cpp

http://commits.kde.org/kdelibs/af93389d5a821e1c99374aff90f357cc738228d6
Comment 3 Lukáš Tinkl 2012-12-19 13:55:09 UTC
*** Bug 294344 has been marked as a duplicate of this bug. ***
Comment 4 Lukáš Tinkl 2012-12-19 13:55:29 UTC
*** Bug 274982 has been marked as a duplicate of this bug. ***
Comment 5 dE 2013-02-09 04:37:45 UTC
WOW!

Finally this's fixed!!

Thanks devs!!