Use correct signature for DriveEject method arguments

The previous commit added the "unmount" parameter as option for the
DriveEject method. It also inadvertently changed the method signature
of the call from "array of strings" to "string".

DIGEST: Fix ejecting CDs/DVDs when using UDisks backend. UDisks2 is not affected

REVIEW: 107686
BUG: 311613
FIXED-IN: 4.9.5